exports_files([
    "alloc.c",
    "array.c",
    "infile.c",
    "instream.c",
    "kve.c",
    "kve.h",
    "kv_single_list.c",
    "log.c",
    "mascii.c",
    "mascii.h",
    "outfile.c",
    "outstream.c",
    "string.c",
], visibility = [
    "//:__pkg__",
    "//test/benchmark:__pkg__",
    "//test/fuzz:__pkg__",
    "//test/src:__pkg__",
])
