exports_files([
    "alloc.c",
    "array.c",
    "infile.c",
    "instream.c",
    "kve.c",
    "kve.h",
    "kv.c",
    "kv.h",
    "kv_broadleaf.c",
    "kv_broadleaf.h",
    "kv_bstree.c",
    "kv_bstree.h",
    "kv_rbtree.c",
    "kv_single_list.c",
    "log.c",
    "mascii.c",
    "mascii.h",
    "outfile.c",
    "outstream.c",
    "string.c",
], visibility = [
    "//:__pkg__",
    "//test/benchmark:__pkg__",
    "//test/fuzz:__pkg__",
    "//test/src:__pkg__",
])
