
cc_library(
    name = "sxproto_lib",
    srcs = [
        "sxproto2textproto.c",
        "//include/fildesh:sxproto.h",
    ],
    deps = ["//:fildesh_lib"],
    visibility = ["//:__pkg__"],
)

cc_binary(
    name = "sxproto2textproto",
    srcs = ["sxproto2textproto_main.c"],
    deps = ["//:sxproto_lib"],
    visibility = ["//:__pkg__"],
)
