
cc_library(
    name = "sxproto_lib",
    srcs = [
        "parse_sxpb.c",
        "parse_sxpb.h",
        "schema.c",
        "sxpb.c",
        "txtpb.c",
        "value.c",
        "value.h",
        "//include/fildesh:sxproto.h",
    ],
    deps = ["//:fildesh_lib"],
    visibility = ["//:__pkg__"],
)

