load("//test/benchmark:benchmark.bzl", "cc_benchmark")


cc_benchmark(
    name = "file_write_read_benchmark",
    srcs = ["file_write_read_benchmark.cc"],
    deps = ["//:fildesh_cc_lib"],
)

cc_benchmark(
    name = "grow_mpop_benchmark",
    srcs = ["grow_mpop_benchmark.cc"],
    deps = ["//:fildesh_lib"],
)

cc_benchmark(
    name = "map_benchmark",
    srcs = ["map_benchmark.cc"],
    deps = ["//:fildesh_lib"],
)

cc_benchmark(
    name = "strchr_benchmark",
    srcs = ["strchr_benchmark.cc"],
    deps = ["//:fildesh_lib"],
)

cc_benchmark(
    name = "strcspn_benchmark",
    srcs = ["strcspn_benchmark.cc"],
    deps = ["//:fildesh_lib"],
)

cc_benchmark(
    name = "strdup_benchmark",
    srcs = ["strdup_benchmark.cc"],
    deps = ["//:fildesh_lib"],
)

